<resources>
    <string name="app_name">myBiller</string>
    <string name="title_activity_homepage">homepage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="menu_contact">Contact</string>
    <string name="name">Name</string>
    <string name="general_information">General Information</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="address">Address</string>
    <string name="choose_logo_image">Choose Logo Image</string>
    <string name="todo">TODO</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_client">Client Details</string>
    <string name="menu_product">Product Details</string>
    <string name="generate_pdf">Generate PDF</string>
</resources>