<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about_us_icon_25"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_baseline_local_phone_24"
            android:title="@string/menu_contact" />
    </group>
    <item android:title="DETAILS">
        <menu>
            <item
                android:id="@+id/nav_client"
                android:icon="@drawable/ic_baseline_client_24"
                android:title="@string/menu_client" />
            <item
                android:id="@+id/nav_product"
                android:icon="@drawable/ic_baseline_product_24"
                android:title="@string/menu_product" />
        </menu>
    </item>
</menu>