<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.myapplication.ui.about.AboutFragment"
        android:label="@string/menu_about" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.myapplication.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />
    <fragment
        android:id="@+id/nav_client"
        android:name="com.example.myapplication.ui.client.ClientFragment"
        android:label="@string/menu_client"
        tools:layout="@layout/fragment_client" />
    <fragment
        android:id="@+id/nav_product"
        android:name="com.example.myapplication.ui.product.ProductFragment"
        android:label="@string/menu_product"
        tools:layout="@layout/fragment_product" />
</navigation>