<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:orientation="vertical"
        android:background="@color/purple_500">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center">

                <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:padding="5dp"
                    android:layout_gravity="center">



                </com.google.android.material.circularreveal.cardview.CircularRevealCardView>


            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general_information"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:layout_marginLeft="8dp"/>
            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="15dp"
                android:hint="Name"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:layout_marginRight="15dp"
                android:textSize="16dp"
                android:background="@color/white"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:textSize="19dp"
                    android:text="@string/mobile_no"
                    android:textColor="@color/black"
                    android:layout_marginLeft="8dp"/>

            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="15dp"
                android:hint="Mobile No."
                android:inputType="number"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:layout_marginRight="15dp"
                android:textSize="16dp"
                android:background="@color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="Email ID"
                    android:textSize="19dp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="8dp"/>
            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="15dp"
                android:hint="Email ID"
                android:inputType="textEmailAddress"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:layout_marginRight="15dp"
                android:textSize="16dp"
                android:background="@color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/address"
                    android:textSize="19dp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="8dp"/>

            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="15dp"
                android:hint="Address"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:layout_marginRight="15dp"
                android:textSize="16dp"
                android:background="@color/white"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:elevation="15dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="PROCEED"
                    android:padding="8dp"
                    android:id="@+id/btn_PROCEED"
                    android:gravity="center"
                    anr
            </LinearLayout>



        </LinearLayout>
    </ScrollView>


</LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>